<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".InfoFragment"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:text="@string/about_text"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutText"
        android:text="@string/accuracy"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/accuracyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accuracy"
        android:text="@string/accuracy_text"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:autoLink="all"/>

</RelativeLayout>