<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsersReportActivity">

    <TextView
        android:id="@+id/usersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_no_of_users"
        android:textSize="24sp"
        android:textColor="#00FF21"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_UsersList" />


    <ListView
        android:id="@+id/lv_UsersFirebase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">

    </ListView>
</LinearLayout>